deploy/dev/fe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-pawn-service
  namespace: dev-pawn-service
spec:
  type: ClusterIP
  selector:
    app: pawn-serivce-app-fe
  ports:
    - port: 80
      targetPort: 5173
