deploy/dev/fe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pawn-service-ingress
  namespace: dev-pawn-service
  annotations:
    argocd.argoproj.io/health-check: "Healthy"
spec:
  ingressClassName: nginx
  rules:
    - host: "fe-pawn.dev.localhost"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fe-pawn-service
                port:
                  number: 80
